// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Table with items, full house 1`] = `
<table
  class="AbcTable AbcTable_sticky AbcTable_highlight AbcTable_border Some-table"
>
  <thead
    class="AbcTable-THead"
  >
    <tr
      class="AbcTable-Tr"
    >
      <th
        class="AbcTable-Th"
      >
        Имя
      </th>
      <th
        class="AbcTable-Th"
      >
        Возраст
      </th>
    </tr>
  </thead>
  <tbody
    class="AbcTable-TBody"
  >
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td"
      >
        Иван
      </td>
      <td
        class="AbcTable-Td"
      >
        15
      </td>
    </tr>
    <tr
      class="AbcTable-Tr"
    >
      <td
        class="AbcTable-Td"
      >
        Игорь
      </td>
      <td
        class="AbcTable-Td"
      >
        27
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Should render Table without items 1`] = `
<table
  class="AbcTable"
>
  <thead
    class="AbcTable-THead"
  >
    <tr
      class="AbcTable-Tr"
    />
  </thead>
  <tbody
    class="AbcTable-TBody"
  />
</table>
`;
